--- a/application/views/scripts/user/shop/all-completed.phtml
+++ b/application/views/scripts/user/shop/all-completed.phtml
@@ -13,7 +13,7 @@
 		<? foreach($this->allcompleted as $sale): ?>
 			<tr class="item-row" id="sale-<?= $sale->id ?>">
 				<td class="data"><?= $this->timeAgo($sale->soldOn) ?></td>
-				<td class='name'><?= $this->saleLink($sale) ?></td>
+				<td class='name'><?= $this->itemLink($sale->item) ?></td>
 				<td class="data">
 					<? if($sale->soldSuccess): ?>
 						<span class='pos'>Sold</span> 
