Slapped a widget around it, looks nice.

--- a/application/views/scripts/post/types/update.phtml
+++ b/application/views/scripts/post/types/update.phtml
@@ -5,7 +5,7 @@
 		<?= $this->post->body ?>
 	</div>
 </div>
-<div id="disqus_thread" style="margin-top: 50px"></div>
+<div id="disqus_thread" class="ui-widget ui-widget-content ui-corner-all" style="margin-top: 20px; padding: 10px"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'd3up'; // required: replace example with your forum shortname
