Fixed item create form getting too long.

--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -1,4 +1,4 @@
-<div class="create-form ui-widget ui-widget-content ui-corner-all">
+<div class="create-form ui-widget ui-widget-content ui-corner-all ui-helper-clearfix">
 	<form method="post">
 		<div class="item-preview">
 			<h3>Item Preview</h3>
