--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -38,24 +38,8 @@
 		<? if($this->record->guideIsPublished || $myBuild): ?>
 			<li><a href="#build-guide">Guide</a></li>
 		<? endif ?>
-		<li><a href="#disqus_thread">Comments</a></li>
+		<!-- <li><a href="#">Comments</a></li> -->
 	</ul>
-	<div id="disqus_thread">
-		<div id="disqus_thread" class="ui-widget ui-widget-content ui-corner-all" style="margin-top: 20px; padding: 10px"></div>
-		<script type="text/javascript">
-		    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-		    var disqus_shortname = 'd3up'; // required: replace example with your forum shortname
-
-		    /* * * DON'T EDIT BELOW THIS LINE * * */
-		    (function() {
-		        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-		        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-		        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-		    })();
-		</script>
-		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-		<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-	</div>
 	<div id="build-skills">
 		<script type="text/javascript">
 			<? if($this->record->passives && $this->record->passives != "null" && count($this->record->passives)): ?>
