Better "All Completed" section

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -30,6 +30,7 @@
 						<li><a href="/item/create">Create Item</a></li>
 						<li><a href="/user/items">My Items</a></li>
 						<li><a href="/items">Item Search</a></li>
+						<li><a href="/item/sales-history">Sales History</a></li>
 					</ul>
 				</li>
 				<li><a href="/build">Builds</a>
