Readded Minified and renamed skills.

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -212,8 +212,8 @@ var activeActives = [];
 	</fieldset>
 	</form>
 </div>
-<script type="text/javascript" src="/js/fullskills.js"></script>
-<script type="text/javascript" src="/js/fullcalc.js"></script>
+<script type="text/javascript" src="/js/skills.js"></script>
+<script type="text/javascript" src="/js/calc.js"></script>
 <script type="text/javascript">
 calc(".equipped a");
 $("#character").tabs({
