--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -68,9 +68,9 @@
 			</ul>
 		</div>
 
-		<!-- <div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-			<b>System Message</b>: I'm tired of seeing giagantic letters at the top of the page, so I'm looking for a logo or some sort of mascot. Want more details? Check out <a href="http://www.reddit.com/r/Diablo/comments/wgxtg/any_artsycomicy_people_want_to_do_up_a_logo_for/">the reddit thread with some ideas</a>. Thanks!</a>.
-		</div> -->
+		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
+			<b>System Message</b>: I just added real skills into all of the builds, feel free to edit your skills in the "Skills" tab of your build to add them. I'm not done with the interface yet, but as always, email feedback to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+		</div>
 
 		<div id="main">
 			<div id="content">
