--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -69,7 +69,7 @@
 		</div>
 
 		<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-			<b>System Message</b>: I just added real skills into all of the builds, feel free to edit your skills in the "Skills" tab of your build to add them. I'm not done with the interface yet, but as always, email feedback to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
+			<b>System Message</b>: I just added real skills into all of the builds, feel free to edit your skills in the "Skills" on your build page. Feel free to checkout the end result on <a href="/b/2">my build</a>. I'm not done with the interface yet, but as always, email feedback to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.	
 		</div>
 
 		<div id="main">
