Added Perfection Ratings.

--- a/application/views/scripts/item/bazaar.phtml
+++ b/application/views/scripts/item/bazaar.phtml
@@ -289,7 +289,7 @@
 										$val += $socketAttrs[$k];
 									}
 									unset($attrs[$v]);
-									echo "<td class='sorted'>".$this->itemStat(ucwords(str_replace("_", " ", $v)), $val)."</td>";							
+									echo "<td class='sorted'>".$this->itemStat(ucwords(str_replace("_", " ", $v)), $val, $item->rating[$v])."</td>";							
 								}
 							}
 							$count = count($this->sortAttrs);
@@ -303,7 +303,7 @@
 								}
 							?>
 							<? if($count > 4) { continue; } ?>
-							<td><?= $this->itemStat($k, $val) ?></td>
+							<td><?= $this->itemStat($k, $val, $item->rating[$v]) ?></td>
 						<? endforeach ?>
 						<? if($count < 6): ?>
 							<? for($i = $count; $i < 6; $i++): ?>
