--- a/application/views/scripts/record/item.phtml
+++ b/application/views/scripts/record/item.phtml
@@ -10,6 +10,16 @@
 </style>
 <div class="single-item">
 	<?= $this->displayItem($this->record) ?>
+	<div style="background-color: #111; margin: 5px; padding: 5px" class='ui-widget ui-corner-all'>
+	<h3 style="margin: 0">Perfection Ratings</h3>
+	<table style="width: 100%">
+		<tr>
+			<? foreach($this->record->rating as $key => $value): ?>
+				<td><?= $this->itemStat($key, round($value, 1) . "%", $value)?></td>
+			<? endforeach ?>			
+		</tr>
+	</table>
+	</div>
 	<p style='text-align: center'>
 		Link: <input type='text' value='http://d3up.com<?= $this->url(array('record' => $this->record), $this->record->route, true) ?>'/>
 		<? if($profile && $this->record->_createdBy && $profile->createReference() == $this->record->_createdBy->createReference()): ?>
