Limited sales to help load times.

--- a/application/views/scripts/user/shop/all-completed.phtml
+++ b/application/views/scripts/user/shop/all-completed.phtml
@@ -1,6 +1,6 @@
 <div style="padding: 20px;">
-	<h2>NOTE: This page will be phased out/replaced eventually.</h2>
 	<p>I've added a more comprehensive tool that lets you search and filter all completed auctions. You can find it in the navigation on the top of the page under 'Items', and it's called '<a href="/item/sales-history">Sales History</a>'. It uses the same search tools as the other item search pages to help you filter down results.</p>
+	<p>This page shows the last 50 sales from all users.</p>
 </div>
 <table id="user-complete" class="d3up-table">
 	<thead>
